--- a/.github/workflows/02-reclaim-mannequins.yml
+++ b/.github/workflows/02-reclaim-mannequins.yml
@@ -26,9 +26,9 @@ jobs:
         run: |
           # Check if mannequins.csv is in root or scripts/
           if [ -f "mannequins.csv" ]; then
-            python3 scripts/reclaim_users.py
+            python3 scripts/06-reclaim_mannequins.py
           elif [ -f "scripts/mannequins.csv" ]; then
-             python3 scripts/reclaim_users.py
+             python3 scripts/06-reclaim_mannequins.py
           else
             echo "❌ Error: mannequins.csv not found."
             exit 1
